fixed column header background and bottom scrollbar being cut off

--- a/projects/OG-Web/web-engine/prototype/styles/common/slickgrid/og.common.slickgrid.css
+++ b/projects/OG-Web/web-engine/prototype/styles/common/slickgrid/og.common.slickgrid.css
@@ -68,8 +68,8 @@
   position: relative;
   background: #a3ceec;
   height: 29px;
-  margin: 0 -2px 2px -2px;
-  padding: 0 4px 3px 0;
+  margin: 0 -2px;
+  padding: 0 4px 2px 0;
 }
 
 .slick-header input,
@@ -77,7 +77,7 @@
   z-index: 1;
 }
 
-.slick-header:before {
+.slick-header-columns:before {
   -webkit-border-bottom-right-radius: 2px;
   -webkit-border-bottom-left-radius: 2px;
   -moz-border-radius-bottomright: 2px;
